--- a/.config/sway/config
+++ b/.config/sway/config
@@ -25,6 +25,7 @@ include /etc/sway/config.d/*
   set $ws4 workspace 4
   set $ws5 workspace 5
   set $ws6 workspace 6
+  set $ws7 workspace 7
 
 ### OUTPUT
 
@@ -32,9 +33,9 @@ output * bg ~/Imágenes/wallpapers/nakai-sin-logo.png fill
 output DP-1 resolution 1920x1080@144.001Hz 
 
 ### IDLE
-  exec swayidle -w \
-    timeout 1800 'swaymsg "output * power off"'\
-    resume 'swaymsg "output * power on"'
+exec swayidle -w \
+  timeout 600 'swaymsg "output * power off"'\
+  resume 'swaymsg "output * power on"'
 
 ### INPUT
 
@@ -51,7 +52,7 @@ input "1452:591:USB_Dongle" {
 }
 
 input "6940:7024:Corsair_CORSAIR_M55_RGB_PRO_Gaming_Mouse" {
-
+  pointer_accel -0.6
 }
 
 
@@ -110,6 +111,8 @@ input "6940:7024:Corsair_CORSAIR_M55_RGB_PRO_Gaming_Mouse" {
     bindsym $mod+4 $ws4
     bindsym $mod+5 $ws5
     bindsym $mod+6 $ws6
+    bindsym $mod+7 $ws7
+
     # Move focused container to workspace
     bindsym $mod+Shift+1 move container to $ws1
     bindsym $mod+Shift+2 move container to $ws2
@@ -117,6 +120,7 @@ input "6940:7024:Corsair_CORSAIR_M55_RGB_PRO_Gaming_Mouse" {
     bindsym $mod+Shift+4 move container to $ws4
     bindsym $mod+Shift+5 move container to $ws5
     bindsym $mod+Shift+6 move container to $ws6
+    bindsym $mod+Shift+7 move container to $ws7
 
   # Layout stuff:
 
