--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -16,6 +16,16 @@
       "4": "",
       "5": "",
       "6": "",
+      "7": "",
+    },
+    "persistent-workspaces": {
+      "1":  [],
+      "2":  [],
+      "3":  [],
+      "4":  [],
+      "5":  [],
+      "6":  [],
+      "7":  [],
     },
   },
 
