--- a/.config/sway/config
+++ b/.config/sway/config
@@ -26,6 +26,7 @@ include /etc/sway/config.d/*
   set $ws5 workspace 5
   set $ws6 workspace 6
   set $ws7 workspace 7
+  set $ws8 workspace 8
 
 ### OUTPUT
 
@@ -33,9 +34,9 @@ output * bg ~/Imágenes/wallpapers/nakai-sin-logo.png fill
 output DP-1 resolution 1920x1080@144.001Hz 
 
 ### IDLE
-exec swayidle -w \
-  timeout 600 'swaymsg "output * power off"'\
-  resume 'swaymsg "output * power on"'
+#exec swayidle -w \
+#  timeout 600 'swaymsg "output * power off"'\
+#  resume 'swaymsg "output * power on"'
 
 ### INPUT
 
@@ -78,6 +79,8 @@ input "6940:7024:Corsair_CORSAIR_M55_RGB_PRO_Gaming_Mouse" {
     # Take screenshot
     bindsym $mod+p exec grim
 
+    # Turn off the screen
+
     # Sound
     bindsym XF86AudioRaiseVolume exec pamixer -i 5
     bindsym XF86AudioLowerVolume exec pamixer -d 5
@@ -112,6 +115,7 @@ input "6940:7024:Corsair_CORSAIR_M55_RGB_PRO_Gaming_Mouse" {
     bindsym $mod+5 $ws5
     bindsym $mod+6 $ws6
     bindsym $mod+7 $ws7
+    bindsym $mod+8 $ws8
 
     # Move focused container to workspace
     bindsym $mod+Shift+1 move container to $ws1
@@ -121,6 +125,7 @@ input "6940:7024:Corsair_CORSAIR_M55_RGB_PRO_Gaming_Mouse" {
     bindsym $mod+Shift+5 move container to $ws5
     bindsym $mod+Shift+6 move container to $ws6
     bindsym $mod+Shift+7 move container to $ws7
+    bindsym $mod+Shift+8 move container to $ws8
 
   # Layout stuff:
 
