--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,23 +1,22 @@
 {
   "name": "main-bar",
+  "margin-top": 5,
+  "margin-bottom": 0,
+  "margin-right": 5,
+  "margin-left": 5,
   "layer": "top",
   "position": "top",
-  "modules-left": ["sway/workspaces", "sway/window", "sway/mode"],
+  "modules-left": ["sway/workspaces", "sway/mode"],
   "modules-center": ["clock"],
   "modules-right": ["tray","disk","memory","cpu","wireplumber"],
 
   "sway/workspaces": {
     "disable-scroll": true,
-    "format": " {icon} ",
+    "format": "{icon}",
     "format-icons": {
-      "1": "󰣇",
-      "2": "󰈹",
-      "3": "",
-      "4": "",
-      "5": "",
-      "6": "",
-      "7": "",
-      "8": "",
+      "focused": "",
+      "default": "",
+      "persistent": "",
     },
     "persistent-workspaces": {
       "1":  [],
