--- a/.config/sway/config
+++ b/.config/sway/config
@@ -194,8 +194,8 @@ bar {
 ### RULES
 for_window [class=steam] floating enable
 
-assign [class="discord"] 5
-assign [app_id="org.telegram.desktop"] 6
+#assign [class="discord"] 5
+#assign [app_id="org.telegram.desktop"] 6
 
 ### OTHERS
 
