--- a/.config/sway/config
+++ b/.config/sway/config
@@ -30,7 +30,7 @@ include /etc/sway/config.d/*
 
 ### OUTPUT
 
-output * bg ~/.config/sway/mitzizune.png fill
+output * bg ~/.config/sway/arch-black-4k.png fill
 output DP-1 resolution 1920x1080@144.001Hz 
 
 ### IDLE
@@ -194,8 +194,8 @@ bar {
 ### RULES
 for_window [class=steam] floating enable
 
-#assign [class="discord"] 5
-#assign [app_id="org.telegram.desktop"] 6
+assign [class="discord"] 5
+assign [app_id="org.telegram.desktop"] 6
 
 ### OTHERS
 
